--- a/spec/fixtures/views/Score_List_create_lists_uses_list_factory-index-empty/view.html
+++ b/spec/fixtures/views/Score_List_create_lists_uses_list_factory-index-empty/view.html
@@ -134,7 +134,7 @@ Erweitert
 <div class='pb-4 mt-4 container'>
 <div class='row g-4'>
 <div class='col-lg-8'>
-<div class='card'>
+<div class='card mb-3'>
 <div class='card-header p-0'>
 <div class='d-flex justify-content-between'>
 <h4 class='m-0 py-2 ps-3'>Startlisten</h4>
@@ -157,6 +157,21 @@ Erweitert
 </div>
 </div>
 </div>
+</div>
+</div>
+</div>
+<div class='col-lg-4'>
+<div class='card mb-3'>
+<div class='card-header p-0'>
+<div class='d-flex justify-content-between'>
+<h4 class='m-0 py-2 ps-3'>Aktionen</h4>
+</div>
+</div>
+<div class='card-body'>
+<div class='d-grid gap-2 col-10 mx-auto'>
+<a class="btn btn-light btn-sm" href="/2024/mv-cup/team_list_restrictions">Mannschaftsbedingungen</a>
+</div>
+
 </div>
 </div>
 </div>
