--- a/spec/fixtures/views/Score_List_move_list_moves_entries-move-new-order/view.html
+++ b/spec/fixtures/views/Score_List_move_list_moves_entries-move-new-order/view.html
@@ -288,7 +288,7 @@ Erweitert
 </div>
 </div>
 <div class='col-lg-4'>
-<div class='card'>
+<div class='card mb-3'>
 <div class='card-header p-0'>
 <div class='d-flex justify-content-between'>
 <h4 class='m-0 py-2 ps-3'>Hinweise</h4>
@@ -309,6 +309,7 @@ Erweitert
 
 </div>
 </div>
+<div class='restriction-check'></div>
 </div>
 </div>
 </div>
