--- a/spec/fixtures/views/TeamListRestriction_team_list_restrictions_managements_uses_CRUD-index-one-entry/view.html
+++ b/spec/fixtures/views/TeamListRestriction_team_list_restrictions_managements_uses_CRUD-index-one-entry/view.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta content='text/html; charset=UTF-8' http-equiv='Content-Type'>
-<title>Mannschaften - MV-Cup - Feuerwehrsport</title>
+<title>MV-Cup - Feuerwehrsport</title>
 <meta content='width=device-width,initial-scale=1' name='viewport'>
 
 
@@ -55,7 +55,7 @@ Benutzer
 <div class='container'>
 <h1>MV-Cup</h1>
 <p class='lead m-0 ms-1'>29.02.2024 - Rostock</p>
-<p class='lead m-0 ms-1'>Mannschaft: Frauen-Team</p>
+<p class='lead m-0 ms-1'>Bedingungen für Startliste</p>
 
 </div>
 </header>
@@ -66,12 +66,8 @@ Benutzer
 <a class="nav-link" href="/2024/mv-cup">Informationen
 </a>
 </div>
-<div class='nav-item active'>
-<a class="nav-link active" aria-current="page" href="/2024/mv-cup/teams">Mannschaften
-</a>
-</div>
 <div class='nav-item'>
-<a class="nav-link" href="/2024/mv-cup/people">Wettkämpfer
+<a class="nav-link" href="/2024/mv-cup/teams">Mannschaften
 </a>
 </div>
 <div class='nav-item'>
@@ -129,127 +125,67 @@ Erweitert
 </header>
 <div class='container mt-4'>
 <div class='alert-flash'>
+<div class='alert alert-info'>Die Änderungen wurden gespeichert.</div>
 </div>
 </div>
 <div class='pb-4 mt-4 container'>
 <div class='row g-4'>
 <div class='col-lg-8'>
-<div class='card mb-3'>
-<div class='card-header p-0'>
-<div class='d-flex justify-content-between'>
-<h4 class='m-0 py-2 ps-3'>Mannschaft: Frauen-Team</h4>
-</div>
-</div>
-<table class='table table-condensed'>
-<tr>
-<th>Name</th>
-<td>Frauen-Team</td>
-</tr>
-<tr>
-<th>Abkürzung</th>
-<td>Frauen-T</td>
-</tr>
-<tr>
-<th>Nummer</th>
-<td>1</td>
-</tr>
-<tr>
-<th>Wertungsgruppe</th>
-<td>Frauen</td>
-</tr>
-<tr>
-<td colspan='2'>
-<div class='alert alert-success mb-0 d-none' id='fire-sport-connected'>
-<i class='far fa-check me-2'></i>
-Verknüpft mit <strong></strong>
-<a target="_blank" rel="noopener" title="Informationen über diese Mannschaft auf Feuerwehrsport-Statistik.de aufrufen" class="btn btn-sm btn-light ms-2" href="https://feuerwehrsport-statistik.de/teams/"><i class='far fa-arrow-up-right-from-square'></i>
-</a></div>
-<div class='alert alert-warning mb-0' id='fire-sport-not-connected'>
-<i class='far fa-warning me-2'></i>
-Keine Verknüpfung mit einer vorhandenen Mannschaft
-</div>
-
-</td>
-</tr>
-<tr>
-<th>Angereist?</th>
-<td>
-<div class='fa-pull-right'>
-<a class=" btn btn-light btn-sm" href="/2024/mv-cup/teams/UUID/markers/UUID/edit?return_to=team"><i class="far fa-edit"></i></a>
-</div>
-
-</td>
-</tr>
-</table>
-
-</div>
-<div class='card mb-3'>
-<div class='card-header p-0'>
-<div class='d-flex justify-content-between'>
-<h4 class='m-0 py-2 ps-3'>Gewünschte Wertungen</h4>
-<a class="card-primary-action" href="/2024/mv-cup/teams/UUID/edit_assessment_requests">Wertungen bearbeiten
-<i class='far fa-edit'></i>
-</a>
-</div>
-</div>
-<table class='table table-condensed'>
-<tr>
-<th>
-<img src="/assets/disciplines/fs.svg" width="20" height="20" />
-4x100m-Hindernisstaffel - Frauen
-</th>
-<td>
-<i class='far fa-xmark'></i>
-</td>
-</tr>
-<tr>
-<th>
-<img src="/assets/disciplines/la.svg" width="20" height="20" />
-Löschangriff Nass - Frauen
-</th>
-<td>
-<i class='far fa-check'></i>
-Mannschaftswertung
-</td>
-</tr>
-</table>
-
-</div>
-</div>
-<div class='col-lg-4'>
 <div class='card'>
 <div class='card-header p-0'>
 <div class='d-flex justify-content-between'>
-<h4 class='m-0 py-2 ps-3'>Aktionen</h4>
-<a class="card-primary-action" href="/2024/mv-cup/teams">Übersicht
-<i class='far fa-list'></i>
-</a>
-</div>
-</div>
-<div class='card-body'>
-<div class='d-grid gap-2'>
-<a class=" btn btn-light btn-sm" href="/2024/mv-cup/people/new?return_to=team&amp;team=UUID">Wettkämpfer hinzufügen</a>
-<a class=" btn btn-light btn-sm" href="/2024/mv-cup/teams/UUID/edit">Name bearbeiten</a>
-<a class=" btn btn-light btn-sm" href="/2024/mv-cup/teams/UUID/edit?form=registration_hint">Anmeldungshinweise bearbeiten</a>
-<a class=" btn btn-light btn-sm" href="/2024/mv-cup/team_list_restrictions/new?team1_id=UUID">Bedingung für Startliste hinzufügen</a>
-<a data-turbo-method="delete" data-turbo-confirm="Mannschaft wirklich löschen? Alle Zeiten usw. werden auch gelöscht!" class=" btn btn-light btn-sm" href="/2024/mv-cup/teams/UUID">Löschen</a>
-</div>
-
-</div>
-</div>
-</div>
-<div class='col-lg-12' id='people-table'>
-<div class='card'>
-<div class='card-header p-0'>
-<div class='d-flex justify-content-between'>
-<h4 class='m-0 py-2 ps-3'>Wettkämpfer</h4>
-<a class="card-primary-action" href="/2024/mv-cup/people/new?return_to=team&amp;team=UUID">Wettkämpfer hinzufügen
+<h4 class='m-0 py-2 ps-3'>Bedingungen für Startliste</h4>
+<a class="card-primary-action" href="/2024/mv-cup/team_list_restrictions/new">Hinzufügen
 <i class='far fa-square-plus'></i>
 </a>
 </div>
 </div>
 <div class='card-body'>
-<div class='alert alert-info'>Keine Einträge gefunden</div>
+<table class='table table-condensed'>
+<tr>
+<td><img src="/assets/disciplines/la.svg" width="20" height="20" /></td>
+<td>
+<a href="/2024/mv-cup/teams/UUID">Frauen-Team 1
+<br>
+<small>Frauen</small>
+</a></td>
+<td title='im gleichen Lauf'>=</td>
+<td>
+<a href="/2024/mv-cup/teams/UUID">Frauen-Team 2
+<br>
+<small>Frauen</small>
+</a></td>
+<td class='text-end'>
+<a class=" btn btn-light btn-sm" href="/2024/mv-cup/team_list_restrictions/UUID/edit">Bearbeiten</a>
+</td>
+</tr>
+</table>
+
+
+</div>
+<div class='card-footer'>
+<div class='d-flex justify-content-between align-items-start'>
+<div></div>
+<div>
+<div class='btn-group'>
+<a target="_blank" rel="noopener" class="btn btn-outline-secondary btn-sm" href="/2024/mv-cup/team_list_restrictions.pdf">PDF
+<i class='far fa-file-pdf'></i>
+</a>
+<a class="btn btn-outline-secondary btn-sm" href="/2024/mv-cup/team_list_restrictions.xlsx">XLS
+<i class='far fa-file-excel'></i>
+</a>
+</div>
+</div>
+</div>
+</div>
+</div>
+
+</div>
+<div class='col-lg-4'><div class='card'>
+<div class='card-body'>
+<p>Diese Bedingungen gelten für das automatische Erstellen der Startliste. Außerdem wird beim Verschieben angezeigt, wenn sie nicht mehr eingehalten werden. Man ließt es so:</p>
+<p><em>Mannschaft 1 nicht im gleichen Lauf wie Mannschaft 2</em></p>
+<p>Wenn beim automatischen Erstellen keine gültige Reihenfolge gefunden wird, werden die Bedingungen immer weiter aufgeweicht, bis eine Startliste erzeugt werden kann.</p>
 
 </div>
 </div>
