--- a/spec/fixtures/views/Team_teams_managements_uses_CRUD-show-empty/view.html
+++ b/spec/fixtures/views/Team_teams_managements_uses_CRUD-show-empty/view.html
@@ -180,7 +180,7 @@ Keine Verknüpfung mit einer vorhandenen Mannschaft
 </table>
 
 </div>
-<div class='card'>
+<div class='card mb-3'>
 <div class='card-header p-0'>
 <div class='d-flex justify-content-between'>
 <h4 class='m-0 py-2 ps-3'>Gewünschte Wertungen</h4>
@@ -219,6 +219,7 @@ Mannschaftswertung
 <a class=" btn btn-light btn-sm" href="/2024/mv-cup/people/new?return_to=team&amp;team=UUID">Wettkämpfer hinzufügen</a>
 <a class=" btn btn-light btn-sm" href="/2024/mv-cup/teams/UUID/edit">Name bearbeiten</a>
 <a class=" btn btn-light btn-sm" href="/2024/mv-cup/teams/UUID/edit?form=registration_hint">Anmeldungshinweise bearbeiten</a>
+<a class=" btn btn-light btn-sm" href="/2024/mv-cup/team_list_restrictions/new?team1_id=UUID">Bedingung für Startliste hinzufügen</a>
 <a data-turbo-method="delete" data-turbo-confirm="Mannschaft wirklich löschen? Alle Zeiten usw. werden auch gelöscht!" class=" btn btn-light btn-sm" href="/2024/mv-cup/teams/UUID">Löschen</a>
 </div>
 
