--- a/spec/fixtures/views/Team_when_user_is_a_applicant_uses_CRUD-show-with-hint/view.html
+++ b/spec/fixtures/views/Team_when_user_is_a_applicant_uses_CRUD-show-with-hint/view.html
@@ -151,7 +151,7 @@ Diese Hinweise werden nur dir<br/> und dem Verwaltern<br/> des Wettkampfes angez
 </table>
 
 </div>
-<div class='card'>
+<div class='card mb-3'>
 <div class='card-header p-0'>
 <div class='d-flex justify-content-between'>
 <h4 class='m-0 py-2 ps-3'>Gewünschte Wertungen</h4>
@@ -190,6 +190,7 @@ Mannschaftswertung
 <a class=" btn btn-light btn-sm" href="/2024/mv-cup/people/new?return_to=team&amp;team=UUID">Wettkämpfer hinzufügen</a>
 <a class=" btn btn-light btn-sm" href="/2024/mv-cup/teams/UUID/edit">Name bearbeiten</a>
 <a class=" btn btn-light btn-sm" href="/2024/mv-cup/teams/UUID/edit?form=registration_hint">Anmeldungshinweise bearbeiten</a>
+<a class=" btn btn-light btn-sm" href="/2024/mv-cup/team_list_restrictions/new?team1_id=UUID">Bedingung für Startliste hinzufügen</a>
 <a data-turbo-method="delete" data-turbo-confirm="Mannschaft wirklich löschen? Alle Zeiten usw. werden auch gelöscht!" class=" btn btn-light btn-sm" href="/2024/mv-cup/teams/UUID">Löschen</a>
 </div>
 
