--- a/spec/fixtures/views/TeamListRestriction_team_list_restrictions_managements_uses_CRUD-index-one-entry/view.html
+++ b/spec/fixtures/views/TeamListRestriction_team_list_restrictions_managements_uses_CRUD-index-one-entry/view.html
@@ -157,6 +157,7 @@ Erweitert
 </a></td>
 <td class='text-end'>
 <a class=" btn btn-light btn-sm" href="/2024/mv-cup/team_list_restrictions/UUID/edit">Bearbeiten</a>
+<a data-turbo-method="delete" data-turbo-confirm="Bedingung wirklich löschen?" class=" btn btn-light btn-sm" href="/2024/mv-cup/team_list_restrictions/UUID">Löschen</a>
 </td>
 </tr>
 </table>
