--- a/spec/fixtures/views/competitions_visibilities_simple_access_login_logs_in_and_out-with-logout-link/view.html
+++ b/spec/fixtures/views/competitions_visibilities_simple_access_login_logs_in_and_out-with-logout-link/view.html
@@ -113,6 +113,9 @@ Erweitert
 
 </div>
 </div>
+<div class='text-end mt-2'>
+<a class="btn btn-sm btn-secondary" href="/wko/2023">DFV-Wettkampfordnung - 4. Auflage 2023</a>
+</div>
 </div>
 <div class='col-lg-6 col-xl-4'>
 <div class='card text-bg-light'>
