--- a/app/views/competitions/showings/show.html.haml
+++ b/app/views/competitions/showings/show.html.haml
@@ -8,6 +8,9 @@
         %p.lead.mb-0 #{l @competition.date} - #{@competition.place}
       .card-body.competition-descripton
         != @competition.description_html
+    - if @competition.wko.present?
+      .text-end.mt-2
+        = link_to(@competition.wko.subtitle, wko_path(@competition.wko.slug), class: 'btn btn-sm btn-secondary')
   .col-lg-6.col-xl-4
     .card.text-bg-light
       - if @competition.locked?
