--- a/spec/fixtures/views/competitions_editings_edit_competition_uses_CRUD-edit/view.html
+++ b/spec/fixtures/views/competitions_editings_edit_competition_uses_CRUD-edit/view.html
@@ -133,6 +133,18 @@ Der Wettkampf *MV-Cup* findet am **29.02.2024** in **Rostock** statt.
 
 Weitere Informationen folgen.</textarea><small class="form-text text-muted">Du kannst den Text mittels <em>Markdown</em> formatieren.</small></div>
 <fieldset class='group'>
+<legend>Wettkampfordnung</legend>
+<div class='row'>
+<div class='col-md-6'>
+<div class="form-group select optional competition_wko"><label class="control-label select optional" for="competition_wko_id">WKO</label><select class="form-select select optional" name="competition[wko_id]" id="competition_wko_id"><option value="" label=" "></option>
+<option value="UUID">WKO 2023</option></select></div>
+</div>
+<div class='col-md-6'>
+<small class='text-muted'>Die ausgewählte Wettkampfordnung wird verlinkt und kann somit schnell von den Wettkämpfern gefunden werden.</small>
+</div>
+</div>
+</fieldset>
+<fieldset class='group'>
 <legend>Kennzeichnungen</legend>
 <div class='row'>
 <div class='col-md-6'>
