--- a/spec/fixtures/views/Competition_competition_creations_creates_competition-new/view.html
+++ b/spec/fixtures/views/Competition_competition_creations_creates_competition-new/view.html
@@ -67,6 +67,18 @@ Benutzer
 <div class="form-group string required competition_name"><label class="control-label string required" for="competition_name">Name <abbr title="required">*</abbr></label><input class="form-control string required" autofocus="autofocus" type="text" name="competition[name]" id="competition_name" /><small class="form-text text-muted">Gib einen kurzen Namen an. Das Datum erscheint extra und braucht nicht im Namen auftauchen.</small></div>
 <div class="form-group date required competition_date"><label class="date required" for="competition_date">Datum <abbr title="required">*</abbr></label><div class="d-flex flex-row justify-content-between align-items-center"><input class="form-control mx-1 date required" type="date" name="competition[date]" id="competition_date" /></div><small class="form-text text-muted">Sollte sich der Wettkampf über mehrere Tage erstrecken, gib den Haupttag an. Weiteres musst du in der Beschreibung ergänzen.</small></div>
 <div class="form-group string required competition_place"><label class="control-label string required" for="competition_place">Ort <abbr title="required">*</abbr></label><input class="form-control string required" type="text" name="competition[place]" id="competition_place" /><small class="form-text text-muted">Es sieht besser aus, wenn du hier nur den Namen des Ortes schreibst. Die vollständige Adresse solltest du in der Beschreibung angeben.</small></div>
+<fieldset class='group'>
+<legend>Wettkampfordnung</legend>
+<div class='row'>
+<div class='col-md-6'>
+<div class="form-group select optional competition_wko"><select class="form-select select optional" name="competition[wko_id]" id="competition_wko_id"><option value="" label=" "></option>
+</select></div>
+</div>
+<div class='col-md-6'>
+<small class='text-muted'>Die ausgewählte Wettkampfordnung wird verlinkt und kann somit schnell von den Wettkämpfern gefunden werden.</small>
+</div>
+</div>
+</fieldset>
 
 </div>
 <div class='card-footer'>
