--- a/spec/fixtures/views/Wko_GET_wko_2023_renders_wko_description/view.html
+++ b/spec/fixtures/views/Wko_GET_wko_2023_renders_wko_description/view.html
@@ -54,22 +54,6 @@
 <div class='card'>
 <div class='card-header p-0'>
 <div class='d-flex justify-content-between'>
-<h4 class='m-0 py-2 ps-3'>Beschreibung</h4>
-</div>
-</div>
-<div class='card-body'>
-<p><strong>Wichtig</strong></p>
-
-<p>Es folgt <em>nichts</em></p>
-
-
-</div>
-</div>
-</div>
-<div class='col-lg-6'>
-<div class='card'>
-<div class='card-header p-0'>
-<div class='d-flex justify-content-between'>
 <h4 class='m-0 py-2 ps-3'>PDF-Download</h4>
 </div>
 </div>
@@ -79,7 +63,7 @@
 <div class='btn btn-dark'>Herunterladen</div>
 </div>
 <div class='col-4'>
-<img src="http://www.example.com/rails/BLOBIDeyJfcmFpbHMiOnsibWVzc2FnZSI6IkJBaDdCam9VY21WemFYcGxYM1J2WDJ4cGJXbDBXd2RwYVdscCIsImV4cCI6bnVsbCwicHVyIjoidmFyaWF0aW9uIn19--94fb1d414ebaf7cd8bcd4b8f611a982c9f7708ce/doc.pdf" />
+<img src="http://www.example.com/rails/BLOBIDdoc.pdf" />
 </div>
 <div class='col-4'>
 <div class='sm'>6,66 KB</div>
@@ -87,6 +71,22 @@
 </div>
 </div>
 </a>
+</div>
+</div>
+</div>
+<div class='col-lg-6'>
+<div class='card'>
+<div class='card-header p-0'>
+<div class='d-flex justify-content-between'>
+<h4 class='m-0 py-2 ps-3'>Beschreibung</h4>
+</div>
+</div>
+<div class='card-body'>
+<p><strong>Wichtig</strong></p>
+
+<p>Es folgt <em>nichts</em></p>
+
+
 </div>
 </div>
 </div>
