--- a/spec/fixtures/views/competitions_editings_edit_competition_uses_CRUD-edit/view.html
+++ b/spec/fixtures/views/competitions_editings_edit_competition_uses_CRUD-edit/view.html
@@ -136,7 +136,7 @@ Weitere Informationen folgen.</textarea><small class="form-text text-muted">Du k
 <legend>Wettkampfordnung</legend>
 <div class='row'>
 <div class='col-md-6'>
-<div class="form-group select optional competition_wko"><label class="control-label select optional" for="competition_wko_id">WKO</label><select class="form-select select optional" name="competition[wko_id]" id="competition_wko_id"><option value="" label=" "></option>
+<div class="form-group select optional competition_wko"><select class="form-select select optional" name="competition[wko_id]" id="competition_wko_id"><option value="" label=" "></option>
 <option value="UUID">WKO 2023</option></select></div>
 </div>
 <div class='col-md-6'>
